--- a/environment.yml
+++ b/environment.yml
@@ -1,14 +1,18 @@
 name: downscaling
 channels:
+  - pytorch
+  - anaconda
+  - conda-forge
   - defaults
 dependencies:
   - _pytorch_select=0.1=cpu_0
   - blas=1.0=mkl
-  - ca-certificates=2021.10.26=haa95532_4
+  - ca-certificates=2021.10.8=h5b45459_0
   - cartopy=0.18.0=py36h80a4efb_1
-  - certifi=2021.5.30=py36haa95532_0
+  - certifi=2020.6.20=pyhd3eb1b0_3
   - cffi=1.14.6=py36h2bbff1b_0
   - cftime=1.5.0=py36h080aedc_0
+  - cudatoolkit=10.1.243=h74a9793_0
   - curl=7.80.0=h2bbff1b_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - freetype=2.10.4=hd328e21_0
@@ -17,26 +21,36 @@ dependencies:
   - hdf5=1.10.6=h7ebc959_0
   - icc_rt=2019.0.0=h0cc432a_1
   - intel-openmp=2022.0.0=haa95532_3663
+  - joblib=0.17.0=py_0
   - jpeg=9d=h2bbff1b_0
   - kiwisolver=1.3.1=py36hd77b12b_0
+  - libblas=3.9.0=1_h8933c1f_netlib
+  - libcblas=3.9.0=5_hd5c7e75_netlib
   - libcurl=7.80.0=h86230a5_0
+  - liblapack=3.9.0=5_hd5c7e75_netlib
   - libnetcdf=4.6.1=hf59b723_4
   - libpng=1.6.37=h2a8f88b_0
   - libssh2=1.9.0=h7a1dbc1_1
   - libtiff=4.2.0=hd0e1b90_0
   - lz4-c=1.9.3=h2bbff1b_1
+  - m2w64-gcc-libgfortran=5.3.0=6
+  - m2w64-gcc-libs=5.3.0=7
+  - m2w64-gcc-libs-core=5.3.0=7
+  - m2w64-gmp=6.1.0=2
+  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
   - matplotlib-base=3.3.4=py36h49ac443_0
   - mkl=2020.2=256
   - mkl-service=2.3.0=py36h196d8e1_0
   - mkl_fft=1.3.0=py36h46781fe_0
   - mkl_random=1.1.1=py36h47e9c7a_0
+  - msys2-conda-epoch=20160418=1
   - netcdf4=1.5.7=py36hb33177a_0
   - ninja=1.10.2=h559b2a2_2
-  - numpy=1.19.2=py36hadc3359_0
-  - numpy-base=1.19.2=py36ha3acd2a_0
+  - numpy=1.19.5=py36h4b40d73_2
   - olefile=0.46=py36_0
-  - openssl=1.1.1m=h2bbff1b_0
+  - openssl=1.1.1l=h8ffe710_0
   - pandas=1.1.5=py36hd77b12b_0
+  - patsy=0.5.2=pyhd8ed1ab_0
   - pillow=8.3.1=py36h4fa10fc_0
   - pip=21.2.2=py36haa95532_0
   - proj=6.2.1=h3758d61_0
@@ -45,21 +59,30 @@ dependencies:
   - pyshp=2.1.3=pyhd3eb1b0_0
   - python=3.6.13=h3758d61_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - pytorch=1.4.0=cpu_py36ha775e86_0
+  - python_abi=3.6=2_cp36m
+  - pytorch=1.6.0=py3.6_cuda101_cudnn7_0
   - pytz=2021.3=pyhd3eb1b0_0
+  - scikit-learn=0.23.2=py36h47e9c7a_0
   - scipy=1.5.2=py36h9439919_0
   - setuptools=58.0.4=py36haa95532_0
   - shapely=1.7.1=py36h06580b3_0
   - six=1.16.0=pyhd3eb1b0_0
   - sqlite=3.37.0=h2bbff1b_0
+  - statsmodels=0.12.2=py36h2bbff1b_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.11=h2bbff1b_0
+  - torchvision=0.7.0=py36_cu101
   - tornado=6.1=py36h2bbff1b_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
   - wheel=0.37.1=pyhd3eb1b0_0
   - wincertstore=0.2=py36h7fe50ca_0
+  - wrapt=1.11.2=py36h779f372_1
+  - wrf-python=1.3.2.6=py36h047a1d1_0
   - xarray=0.18.0=pyhd3eb1b0_0
   - xz=5.2.5=h62dcd97_0
   - zlib=1.2.11=h8cc25b3_4
   - zstd=1.4.9=h19a0ad4_0
+  - pip:
+    - ecmwf-api-client==1.6.3
 prefix: C:\Users\evbec\anaconda3\envs\downscaling
